# QR_Code

./: CMakeLists.txt
qr-core/: CMakeLists.txt
qr-core/include/qr/: qr-core.hpp
qr-core/src/: qr-core.cpp
qr-prog/: CMakeLists.txt
qr-prog/src/: prog.cpp
